navigation, rxjava adapter

--- a/COVIDNow/app/build.gradle
+++ b/COVIDNow/app/build.gradle
@@ -72,6 +72,7 @@ dependencies {
     // Retrofit + GSON
     implementation "com.squareup.retrofit2:retrofit:$retrofitVersion"
     implementation "com.squareup.retrofit2:converter-gson:$retrofitVersion"
+    implementation "com.squareup.retrofit2:adapter-rxjava3:2.9.0"
 
     // Paging 3
     implementation "androidx.paging:paging-runtime-ktx:$pagingVersion"
