--- a/COVIDNow/app/build.gradle
+++ b/COVIDNow/app/build.gradle
@@ -97,6 +97,11 @@ dependencies {
     implementation "io.reactivex.rxjava3:rxandroid:$rxAndroid_version"
     implementation "io.reactivex.rxjava3:rxjava:$rxJava_version"
 
+    // Kotlin components
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    api "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutines_version"
+    api "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutines_version"
+
     implementation "androidx.activity:activity-ktx:1.2.3"
     implementation "androidx.fragment:fragment-ktx:1.3.4"
 
