--- a/COVIDNow/build.gradle
+++ b/COVIDNow/build.gradle
@@ -11,6 +11,7 @@ buildscript {
     ext.archLifecycleVersion ="2.2.0"
     ext.rxAndroid_version = "3.0.0"
     ext.rxJava_version = "3.0.13"
+    ext.coroutines_version = "1.4.3"
 
     repositories {
         google()
